import React from 'react'
import { Linking } from 'react-native'
import { YStack, XStack, SizableText, ScrollView, Separator, Spacer } from 'tamagui'
import { useSafeAreaInsets } from 'react-native-safe-area-context'

import Icon from '../../components/Global/components/icon'
import { Text } from '../../components/Global/helpers/text'
import usePatrons from '../../api/queries/patrons'
import { useInfoCaption } from '../../hooks/use-caption'
import { version } from '../../../package.json'
import { getStoredOtaVersion } from 'react-native-nitro-ota'
import { downloadUpdate } from '../../services/ota'
import { ICON_PRESS_STYLES } from '../../configs/styling/elements'
import { SPECIAL_THANKS } from '../../configs/messaging/special-thanks'

function PatronsList({ patrons }: { patrons: { fullName: string }[] | undefined }) {
	if (!patrons?.length) return null
	return (
		<XStack flexWrap='wrap' gap='$2' marginTop='$2'>
			{patrons.map((patron, index) => (
				<XStack key={index} alignItems='flex-start' maxWidth='$20'>
					<Text numberOfLines={1} lineBreakStrategyIOS='standard'>
						{patron.fullName}
					</Text>
				</XStack>
			))}
		</XStack>
	)
}

function SpecialThanksList() {
	return (
		<XStack flexWrap='wrap' gap='$2' marginTop='$2'>
			{SPECIAL_THANKS.map((awesomePerson) => (
				<XStack key={awesomePerson} alignItems='flex-start' maxWidth='$20'>
					<Text numberOfLines={1} lineBreakStrategyIOS='standard'>
						{awesomePerson}
					</Text>
				</XStack>
			))}
		</XStack>
	)
}

export default function AboutScreen(): React.JSX.Element {
	const { bottom } = useSafeAreaInsets()
	const patrons = usePatrons()
	const { data: caption } = useInfoCaption()
	const otaVersion = getStoredOtaVersion()

	return (
		<YStack flex={1} backgroundColor='$background' testID='settings-screen-about'>
			<ScrollView
				contentContainerStyle={{
					paddingBottom: Math.max(bottom, 16) + 16,
					paddingHorizontal: '$2',
				}}
				showsVerticalScrollIndicator={false}
			>
				<YStack
					padding='$4'
					gap='$4'
					borderRadius={'$2'}
					borderColor={'$borderColor'}
					borderWidth={'$1'}
				>
					<YStack gap='$1'>
						<XStack alignItems='center' gap='$2' testID='jellify-version-text'>
							<Icon name='jellyfish' color='$primary' />
							<SizableText size='$6' fontWeight='600'>
								Jellify {version}
							</SizableText>
						</XStack>
						{caption && (
							<SizableText size='$2' color='$borderColor'>
								{caption}
							</SizableText>
						)}
						{otaVersion && (
							<SizableText size='$2' color='$borderColor'>
								OTA Version: {otaVersion}
							</SizableText>
						)}
					</YStack>

					<Separator borderColor={'$borderColor'} />

					<XStack gap='$4' flexWrap='wrap'>
						<XStack
							alignItems='center'
							gap='$1'
							onPress={() => Linking.openURL('https://github.com/Jellify-Music/App')}
							testID='jellify-source-link'
							{...ICON_PRESS_STYLES}
						>
							<Icon name='code-tags' small color='$borderColor' />
							<Text>View Source</Text>
						</XStack>
						<XStack
							alignItems='center'
							gap='$1'
							onPress={() => downloadUpdate(true)}
							{...ICON_PRESS_STYLES}
						>
							<Icon name='cellphone-arrow-down' small color='$success' />
							<Text>Update</Text>
						</XStack>
					</XStack>

					<YStack gap='$2'>
						<SizableText size='$4' fontWeight='600'>
							Caught a bug?
						</SizableText>
						<XStack gap='$4' flexWrap='wrap'>
							<XStack
								alignItems='center'
								gap='$1'
								onPress={() =>
									Linking.openURL('https://github.com/Jellify-Music/App/issues')
								}
								testID='jellify-report-issue'
								{...ICON_PRESS_STYLES}
							>
								<Icon name='github' small color='$warning' />
								<Text>Report Issue</Text>
							</XStack>
							<XStack
								alignItems='center'
								gap='$1'
								onPress={() => Linking.openURL('https://discord.gg/yf8fBatktn')}
								testID='jellify-join-discord'
								{...ICON_PRESS_STYLES}
							>
								<Icon name='chat' small color='$secondary' />
								<Text>Join Discord</Text>
							</XStack>
						</XStack>
					</YStack>
				</YStack>

				<Spacer />

				<YStack
					gap='$2'
					testID='jellify-wall-of-fame'
					padding='$4'
					borderRadius={'$2'}
					borderColor={'$borderColor'}
					borderWidth={'$1'}
				>
					<SizableText size='$4' fontWeight='600'>
						Wall of Fame
					</SizableText>
					<XStack gap='$4' flexWrap='wrap'>
						<XStack
							alignItems='center'
							gap='$1'
							onPress={() =>
								Linking.openURL('https://github.com/sponsors/anultravioletaurora/')
							}
							testID='jellify-sponsors-link'
							{...ICON_PRESS_STYLES}
						>
							<Icon name='github' small color='$primary' />
							<Text>Sponsors</Text>
						</XStack>
						<XStack
							alignItems='center'
							gap='$1'
							onPress={() =>
								Linking.openURL('https://patreon.com/anultravioletaurora')
							}
							testID='jellify-patreon-link'
							{...ICON_PRESS_STYLES}
						>
							<Icon name='patreon' small color='$danger' />
							<Text>Patreon</Text>
						</XStack>
						<XStack
							alignItems='center'
							gap='$1'
							onPress={() => Linking.openURL('https://ko-fi.com/jellify')}
							testID='jellify-ko-fi-link'
							{...ICON_PRESS_STYLES}
						>
							<Icon name='coffee-outline' small color='$warning' />
							<Text>Ko-fi</Text>
						</XStack>
					</XStack>
					<PatronsList patrons={patrons} />
				</YStack>

				<Spacer />

				<YStack
					padding='$4'
					gap='$4'
					borderRadius={'$2'}
					borderColor={'$borderColor'}
					borderWidth={'$1'}
				>
					<YStack gap='$1'>
						<SizableText size='$4' fontWeight='600'>
							Special Thanks
						</SizableText>
						<SpecialThanksList />
					</YStack>
				</YStack>
			</ScrollView>
		</YStack>
	)
}
